--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.5",
 		"@typescript-eslint/parser": "^5.59.5",
 		"@vitejs/plugin-react": "^4.0.0",
+		"autoprefixer": "^10.4.14",
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.2.0",
@@ -37,7 +38,9 @@
 		"husky": "^8.0.0",
 		"jsdom": "^22.0.0",
 		"lint-staged": "^13.2.2",
+		"postcss": "^8.4.23",
 		"prettier": "2.8.8",
+		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.2",
 		"vitest": "^0.31.0"
