--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
 		"prepare": "husky install",
-		"test": "vitest"
+		"test": "vitest",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"test-storybook": "test-storybook"
 	},
 	"dependencies": {
+		"@storybook/addon-a11y": "^7.0.10",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
@@ -19,6 +23,15 @@
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
+		"@storybook/addon-essentials": "^7.0.10",
+		"@storybook/addon-interactions": "^7.0.10",
+		"@storybook/addon-links": "^7.0.10",
+		"@storybook/blocks": "^7.0.10",
+		"@storybook/jest": "^0.1.0",
+		"@storybook/react": "^7.0.10",
+		"@storybook/react-vite": "^7.0.10",
+		"@storybook/test-runner": "^0.10.0",
+		"@storybook/testing-library": "0.0.14-next.2",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@types/react": "^18.0.28",
@@ -35,11 +48,14 @@
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
+		"eslint-plugin-storybook": "^0.6.12",
 		"husky": "^8.0.0",
 		"jsdom": "^22.0.0",
 		"lint-staged": "^13.2.2",
 		"postcss": "^8.4.23",
 		"prettier": "2.8.8",
+		"prop-types": "^15.8.1",
+		"storybook": "^7.0.10",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.2",
