--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"framer-motion": "^10.12.12",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"vite-plugin-svgr": "^3.2.0"
